# rag-example

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: db_config.py  load_documents.py  rag_example.py  search.py
