[tool.poetry]
name = "pudato-core"
version = "0.1.0"
description = "Pudato Core"
authors = ["Alanezz <adrian.soto.suarez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.7"
langchain-postgres = "^0.0.9"
sentence-transformers = "^3.0.1"
langchain-huggingface = "^0.0.3"
psycopg-binary = "^3.2.1"
langchain-community = "^0.2.14"
pdfplumber = "^0.11.4"
openai = "^1.43.0"

[tool.poetry.dev-dependencies]
